<resources>
    <string name="app_name">FirstTest</string>
    <string name="alertCity">Введите название города</string>
    <string name="MainText">Погода в Вашем городе</string>
    <string name="TypeYourCity">Введите название города</string>
    <string name="CheckWeather">Узнать погоду</string>
    <string name="WhatIshouldToWear">Что мне надеть</string>
    <string name="AboutMe">Разработчик - Носов Иван\nВ рамках программы Сетевого ИТ-Университета \n«Разработка мобильных приложений под платформу Android»</string>
    <string name="more">Подробная погода</string>


    <string name="first">GET LIST USERS</string>
    <string name="second">GET SINGLE USER</string>
    <string name="third">GET SINGLE USER NOT FOUND</string>
    <string name="fourth">GET LIST RESOURCE</string>
    <string name="five">GET SINGLE RESOURCE</string>
    <string name="six">GET SINGLE RESOURCE NOT FOUND</string>
    <string name="seven">POST CREATE</string>
    <string name="eight">PUT UPDATE</string>
    <string name="nine">PATCH UPDATE</string>
    <string name="ten">DELETE LIST USERS</string>
    <string name="bg_hot">bg_hot</string>


</resources>